--- a/package.json
+++ b/package.json
@@ -10,10 +10,18 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.14",
+    "dotenv": "^16.1.4",
     "next": "13.4.2",
+    "nodemailer": "^6.9.3",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2"
+  },
+  "devDependencies": {
+    "@types/node": "20.2.5",
+    "@types/nodemailer": "^6.4.8",
+    "@types/react": "18.2.8",
+    "typescript": "5.1.3"
   }
 }
